Fix odd chrome overflow issues
CSS changes which attempt to fix some odd issues I occasionally notice
on Chrome where vertical scrollbars appear needlessly on <pre> blocks
within the body. I'm sure I've done something not quite right, but the
easiest fix for now is to set overflow-y: visible to allow the content
to flow outside its box. At least this degrades somewhat gracefully, as
long as the content doesn't overflow excessively.

--- a/_base-mobile.scss
+++ b/_base-mobile.scss
@@ -537,7 +537,8 @@ table.codehilitetable {
   border-collapse: collapse;
   border-spacing: 0;
   display: block;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: visible;
   max-width: 100%;
 }
 
@@ -571,7 +572,8 @@ div.codehilite {
 }
 
 div.section>div.codehilite {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: visible;
 }
 
 hr {
