--- a/_base-print.scss
+++ b/_base-print.scss
@@ -342,7 +342,7 @@ table.codehilitetable {
   border-collapse: collapse;
   border-spacing: 0;
   display: block;
-  overflow: auto;
+  overflow: visible;
   max-width: 100%;
 }
 
@@ -372,7 +372,7 @@ div.codehilite {
 }
 
 div.section>div.codehilite {
-  overflow: auto;
+  overflow: visible;
 }
 
 hr {
