--- a/_base.scss
+++ b/_base.scss
@@ -504,7 +504,8 @@ table.codehilitetable {
   border-collapse: collapse;
   border-spacing: 0;
   display: block;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: visible;
   max-width: 100%;
 }
 
@@ -538,7 +539,8 @@ div.codehilite {
 }
 
 div.section>div.codehilite {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: visible;
 }
 
 hr {
